--- a/css/miestilo.css
+++ b/css/miestilo.css
@@ -86,12 +86,15 @@ hgroup{
     height: auto;
     width: 100%;
     object-fit: cover;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+
 }
 
 .img-mini {
-    height: auto;
-    width: 100%;
+    height: 16rem;
+    width: 16rem;
     cursor: pointer;
+    object-fit:cover;
     transition: transform 0.3s ease;
 }
 
