--- a/css/miestilo.css
+++ b/css/miestilo.css
@@ -4,7 +4,7 @@ header {
 }
 
 main {
-<!--    background-color: #212529; -->
+<!-- background-color: #212529; -->
 }
 
 footer {
@@ -176,8 +176,20 @@ article{
 
 .card-img-top {
     width:100%;
-    height: 70%;
+    height: 90%;
     object-fit: cover;
+}
+
+hgroup>p{
+    text-align:justify;
+}
+
+figure>img{
+    max-height:20rem;
+}
+
+#titulo{
+    font-family: "Noto Sans";
 }
 
 .precio{
